--- a/_includes/base.liquid
+++ b/_includes/base.liquid
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Typographic Singularity 2020" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="{{'/style.css' | url }}">
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
     <title>Typographic Singularity 2020</title>
